--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -28,7 +28,7 @@ jobs:
         uses: actions/checkout@v3
         with: 
           repository: Qst236/getnews
-          ssh-key: ${{ secrets.GETEPG }}
+          ssh-key: ${{ secrets.GETNEWS }}
           path: getnews
           ref: main
           
