--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -59,6 +59,6 @@ jobs:
         run: |
           git config --local user.name github-actions
           git config --local user.email github-actions@github.com
-          git release add news.json
-          git release commit -m "auto update at ${{ env.UPDATE_TIME }}" --allow-empty
-          git release push
+          git add news.json
+          git commit -m "auto update at ${{ env.UPDATE_TIME }}" --allow-empty
+          git push
