--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -3,8 +3,7 @@ name: Update News Information
 on:
   workflow_dispatch:
   schedule:
-    - cron: '0 6 * * Sun'
-    - cron: '*/5 * * * Mon-Fri'
+    - cron: '*/5 * * * *'
   push:
     branches:
       - main
