--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -2,7 +2,7 @@ name: Update News Information
 
 on:
   workflow_dispatch:
-  schedule:
+  #schedule:
     - cron: '*/5 * * * *'
   push:
     branches:
