--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -32,13 +32,13 @@ jobs:
           path: getnews
           ref: main
 
-      - name: Cache pip
-        uses: actions/cache@v3
-        with:
-          path: ~/.cache/pip
-          key: ${{ runner.os }}-pip-${{ hashFiles('getnews/requirements.txt') }}
-          restore-keys: |
-            ${{ runner.os }}-pip-
+      #- name: Cache pip
+      #  uses: actions/cache@v3
+      #  with:
+      #    path: ~/.cache/pip
+      #    key: ${{ runner.os }}-pip-${{ hashFiles('getnews/requirements.txt') }}
+      #    restore-keys: |
+      #      ${{ runner.os }}-pip-
           
       - name: install dependencies
         run: |
